--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 .backgroundVideo {
-    position:absolute;
+    position: absolute;
     left: 50%;
     bottom: 50%;
+    transform: translate(-50%,50%);
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -100;
 }
