--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,21 @@
   src: url(../assets/Brilliantte.woff);
 }
 
+.welcomeTitle {    
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%,50%);
+  color: white;
+
+}
+
 .backgroundVideo {
-    position: absolute;
-    left: 50%;
-    bottom: 50%;
-    transform: translate(-50%,50%);
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -100;
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%,50%);
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -100;
 }
