--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,12 @@
   left: 50%;
   bottom: 50%;
   transform: translate(-50%,50%);
+  width: 100%;
+  text-align: center;
   color: white;
-
+  font-family: Brilliantte;
+  font-size: 65pt;
+  text-shadow: 0px 0px 10px rgba(150, 150, 150, 1);
 }
 
 .backgroundVideo {
