--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,11 @@
   min-height: 100%;
   z-index: -100;
 }
+
+.checkerboardPattern {
+  background-color: #eee;
+  background-image: linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black),
+  linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black);
+  background-size: 60px 60px;
+  background-position: 0 0, 30px 30px;
+}
