--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
   bottom: 50%;
   transform: translate(-50%,50%);
   width: 100%;
+  z-index: 1;
   text-align: center;
   color: white;
   font-family: Brilliantte;
